// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- uploading 1`] = `
<div
  className="upload-progress"
>
  <div
    className="title"
  >
    Uploading
  </div>
  <div
    className="description"
  >
    /file1.json
  </div>
  <div
    className="controls"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={5}
        aria-valuemin={0}
        aria-valuenow={0}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`2- uploading 2 1`] = `
<div
  className="upload-progress"
>
  <div
    className="title"
  >
    Uploading
  </div>
  <div
    className="description"
  >
    /file3.json
  </div>
  <div
    className="controls"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={5}
        aria-valuemin={0}
        aria-valuenow={2}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "40%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`3- conflicted 1`] = `
<div
  className="upload-conflict"
>
  <div
    className="message"
  >
    /file3.json already exists
  </div>
  <div
    className="question"
  >
    Do you want to overwrite it?
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Yes
    </button>
    <button
      className="btn btn-outline-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Yes to All
    </button>
    <span
      className="separator"
    />
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      No
    </button>
    <button
      className="btn btn-outline-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      No to All
    </button>
    <span
      className="separator"
    />
    <button
      className="btn btn-outline-info btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`3- conflicted with single file 1`] = `
<div
  className="upload-conflict"
>
  <div
    className="message"
  >
    /file3.json already exists
  </div>
  <div
    className="question"
  >
    Do you want to overwrite it?
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Yes
    </button>
    <span
      className="separator"
    />
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      No
    </button>
    <span
      className="separator"
    />
    <button
      className="btn btn-outline-info btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`4- completed single file 1`] = `
<div
  className="upload-done"
>
  <div
    className="title"
  >
    Done
  </div>
  <div
    className="summary"
  >
    <span
      className="summary-item completed"
    >
      1 file uploaded
    </span>
  </div>
  <div
    className="details"
  >
    <span
      className="show-details"
      onClick={[Function]}
    >
      show details
    </span>
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`5- completed multi file 1`] = `
<div
  className="upload-done"
>
  <div
    className="title"
  >
    Done
  </div>
  <div
    className="summary"
  >
    <span
      className="summary-item completed"
    >
      2 files uploaded
    </span>
  </div>
  <div
    className="details"
  >
    <span
      className="show-details"
      onClick={[Function]}
    >
      show details
    </span>
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`6- completed mixed 1`] = `
<div
  className="upload-done"
>
  <div
    className="title"
  >
    Done
  </div>
  <div
    className="summary"
  >
    <span
      className="summary-item completed"
    >
      2 files uploaded
    </span>
    <span
      className="summary-item failed"
    >
      2 files failed
    </span>
    <span
      className="summary-item skipped"
    >
      1 file skipped
    </span>
  </div>
  <div
    className="details"
  >
    <span
      className="show-details"
      onClick={[Function]}
    >
      show details
    </span>
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`7- show details 1`] = `
<div
  className="upload-done"
>
  <div
    className="title"
  >
    Done
  </div>
  <div
    className="summary"
  >
    <span
      className="summary-item completed"
    >
      2 files uploaded
    </span>
    <span
      className="summary-item failed"
    >
      2 files failed
    </span>
    <span
      className="summary-item skipped"
    >
      1 file skipped
    </span>
  </div>
  <div
    className="details"
  >
    <span
      className="show-details"
      onClick={[Function]}
    >
      show details
    </span>
    <div
      className="detail-list user-select"
    >
      <div
        className="detail-list-item success"
      >
        file2.json uploaded
      </div>
      <div
        className="detail-list-item success"
      >
        file3.json uploaded
      </div>
      <div
        className="detail-list-item error"
      >
        file4.json could not uploaded
      </div>
      <div
        className="detail-list-item error"
      >
        file5.json could not uploaded
      </div>
      <div
        className="detail-list-item info"
      >
        file6.json skipped
      </div>
    </div>
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;
